--- a/graph_page.html
+++ b/graph_page.html
@@ -39,6 +39,7 @@
   <button type="button" class="year_2021" onclick="graph2(8)">9월</button>
   <button type="button" class="year_2021" onclick="graph2(9)">10월</button>
   <button type="button" class="year_2021" onclick="graph2(10)">11월</button>
+  <button type="button" class="year_2021" onclick="graph2(11)">12월</button>
   <div id="graphsection">
   </div>
   </fieldset>
